--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Voice Controlled Notes App</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">
         <link rel="stylesheet" href="styles.css">
 
@@ -19,16 +19,19 @@
 
             <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In Google Chrome.</h3>
 
-            <div class="app"> 
+            <div class="app">
                 <h3>Add New Note</h3>
+
+                <h1>Say "Apple"</h1>
+
                 <div class="input-single">
                     <textarea id="note-textarea" placeholder="Create a new note by typing or using voice recognition." rows="6"></textarea>
-                </div>         
+                </div>
                 <button id="start-record-btn" title="Start Recording">Start Recognition</button>
                 <button id="pause-record-btn" title="Pause Recording">Pause Recognition</button>
-                <button id="save-note-btn" title="Save Note">Save Note</button>   
+                <button id="save-note-btn" title="Save Note">Save Note</button>
                 <p id="recording-instructions">Press the <strong>Start Recognition</strong> button and allow access.</p>
-                
+
                 <h3>My Notes</h3>
                 <ul id="notes">
                     <li>
@@ -38,15 +41,15 @@
 
             </div>
 
+            <h1 id="my-text">My text is: </h1>
+            <h1 id="my-result">Result: </h1>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="script.js"></script>
 
-        <!-- Only used for the demos ads. Please ignore and remove. --> 
+        <!-- Only used for the demos ads. Please ignore and remove. -->
         <script src="https://cdn.tutorialzine.com/misc/enhance/v3.js" async></script>
 
     </body>
 </html>
-
-
