--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 <button id="save-note-btn" title="Save Note">Save Note</button> -->
                 <p id="recording-instructions">Press the <strong>Start Recognition</strong> button and allow access.</p>
 
-                <h3>My Notes</h3>
+                <!-- <h3>My Notes</h3>
                 <ul id="notes">
                     <li>
                         <p class="no-notes">You don't have any notes.</p>
                     </li>
-                </ul>
+                </ul> -->
 
             </div>
 
