--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css"> -->
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -28,9 +28,9 @@
 
     <h1 id="prompt"></h1>
 
-    <div class="input-single">
-      <textarea id="note-textarea" rows="1"></textarea>
-    </div>
+    <h4 id="input-single">
+      <!-- <textarea id="note-textarea" rows="1"></textarea> -->
+    </h4>
 
     <div class="button" id="start-record-btn" title="Start Recording">
       <div class="inner"></div>
