made it more screen-width responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <h1 id="prompt"></h1>
 
-    <h4 id="input-single">
+    <h4 id="input-single">say the word above
       <!-- <textarea id="note-textarea" rows="1"></textarea> -->
     </h4>
 
